WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307661
::picker(select) should not support most pseudo-classes
https://bugs.webkit.org/show_bug.cgi?id=307661
Summary
::picker(select) should not support most pseudo-classes
Anne van Kesteren
Reported
2026-02-12 01:59:11 PST
.
Attachments
Add attachment
proposed patch, testcase, etc.
Anne van Kesteren
Comment 1
2026-02-12 02:00:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58496
EWS
Comment 2
2026-02-12 10:23:56 PST
Committed
307375@main
(fab41f773782): <
https://commits.webkit.org/307375@main
> Reviewed commits have been landed. Closing PR #58496 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-02-12 10:24:13 PST
<
rdar://problem/170245016
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug