::picker(select) should not support most pseudo-classes https://bugs.webkit.org/show_bug.cgi?id=307661

Reviewed by Tim Nguyen.

It was long ago decided to not duplicate pseudo-class API surface,
including with ::picker(select).

Let ::slotted take the default path (which returns false).
Canonical link: https://commits.webkit.org/307375@main